--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.23.9",
 		"@babel/preset-env": "^7.23.9",
+		"@testing-library/jest-dom": "^6.3.0",
 		"@testing-library/react": "^14.1.2",
 		"babel-jest": "^29.7.0",
 		"jest": "^29.7.0",
@@ -26,6 +27,7 @@
 		"tailwindcss": "^3.4.1"
 	},
 	"dependencies": {
+		"@babel/preset-react": "^7.23.3",
 		"@reduxjs/toolkit": "^2.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
